# workshop-StartGuides

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  test_main.py
.claude/agents/: code-reviewer.md  meta-agent.md  prd-generator.md
PRPs/ai_docs/: anthropic_api.md
part2/slide_agent_tasks/: poc_outline.md  slide_agent.py  task1.md  task2.md  task3.md  task4.md  task5.md
slide_agent/: agent.py
slides/: agentic-engineering-workshop-24-slides.html  claude-code-workshop-10-slides.html  claude-code-workshop-16-slides.html  rasmus-agentic-engineering-workshop.html
